@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-29T01:03:50Z",
+  "timestamp" : "2024-02-29T08:17:53Z",
   "count_outdated" : 1599,
   "uniques_outdated" : 875,
-  "count" : 1617,
-  "uniques" : 885,
+  "count" : 1618,
+  "uniques" : 886,
   "clones" : [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
